tests/baselines/reference/YieldExpression15_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression15_es6.ts(2,6): error TS1163: 'yield' expression must be contained_within a generator declaration.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression15_es6.ts (1 errors) ====
    var v = () => {
         yield foo
         ~~~~~
!!! error TS1163: 'yield' expression must be contained_within a generator declaration.
      }